[tool.poetry]
name = "diffusion-python-bot"
version = "0.1.0"
description = "A simple python discord bot for generating images via Stable Diffusion on a local pipeline. In active development, use at your own risk."
authors = ["Bagheera <bghira@>"]
packages = [{include = "diffusion_python_bot"}]

[tool.poetry.scripts]
bot = "diffusion_python_bot.main:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow-io-gcs-filesystem = "0.31.0"
absl-py = "1.4.0"
accelerate = "0.18.0"
astunparse = "1.6.3"
cachetools = "5.3.0"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
diffusers = "0.14.0"
filelock = "3.10.5"
flatbuffers = "23.3.3"
gast = "0.4.0"
google-auth = "2.16.3"
google-auth-oauthlib = "0.4.6"
google-pasta = "0.2.0"
grpcio = "1.51.3"
h5py = "3.8.0"
huggingface-hub = "0.13.3"
idna = "3.4"
importlib-metadata = "6.1.0"
jax = "0.4.6"
keras = "2.12.0"
libclang = "16.0.0"
Markdown = "3.4.3"
MarkupSafe = "2.1.2"
mypy-extensions = "1.0.0"
numpy = "1.23.5"
nvidia-cublas-cu11 = "11.10.3.66"
nvidia-cublas-cu12 = "12.1.0.26"
nvidia-cuda-nvrtc-cu11 = "11.7.99"
nvidia-cuda-runtime-cu11 = "11.7.99"
nvidia-cuda-runtime-cu12 = "12.1.55"
nvidia-cudnn-cu11 = "8.5.0.96"
nvidia-cudnn-cu12 = "8.8.1.3"
oauthlib = "3.2.2"
opt-einsum = "3.3.0"
packaging = "23.0"
Pillow = "9.4.0"
protobuf = "4.22.1"
psutil = "5.9.4"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pyre-extensions = "0.0.23"
PyYAML = "6.0"
regex = "2023.3.23"
requests = "2.28.2"
requests-oauthlib = "1.3.1"
rsa = "4.9"
safetensors = "0.3.0"
scipy = "1.10.1"
six = "1.16.0"
tensorboard = "2.12.0"
tensorboard-data-server = "0.7.0"
tensorboard-plugin-wit = "1.8.1"
tensorflow = "2.12.0"
tensorflow-estimator = "2.12.0"
tensorrt = "8.6.0"
termcolor = "2.2.0"
tokenizers = "0.13.2"
torch = "1.13.1"
torchaudio = "0.13.1"
torchvision = "0.14.1"
tqdm = "4.65.0"
transformers = "4.27.3"
typing-inspect = "0.8.0"
typing-extensions = "4.5.0"
urllib3 = "1.26.15"
Werkzeug = "2.2.3"
wrapt = "1.14.1"
xformers = "0.0.16"
zipp = "3.15.0"
discord = "^2.2.2"
tomlkit = "^0.11.6"


[tool.poetry.dev-dependencies]
pre-commit = "^3.2.1"
black = "^23.1.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.28.11.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
